migrator-tests/src/snapshots/migrator_tests__source_prune::test_can_prune_some_unapplied_and_some_applied_migrations::{{closure}}__one_way___strictsingle field name change strategy: renamedb_state_2.snap
---
source: migrator-tests/src/lib.rs
expression: db_miration_schema_state
---
DbMigrationSchemaState {
    resources: DbInfo {
        analyzers: Analyzers(
            Info(
                {},
            ),
        ),
        functions: Functions(
            Info(
                {},
            ),
        ),
        params: Params(
            Info(
                {},
            ),
        ),
        scopes: Scopes(
            Info(
                {},
            ),
        ),
        tables: Tables(
            Info(
                {
                    "animal": DefineStatementRaw(
                        "DEFINE TABLE animal SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "animal_snake_case": DefineStatementRaw(
                        "DEFINE TABLE animal_snake_case SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "crop": DefineStatementRaw(
                        "DEFINE TABLE crop SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "eats": DefineStatementRaw(
                        "DEFINE TABLE eats SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "eats_snake_case": DefineStatementRaw(
                        "DEFINE TABLE eats_snake_case SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "migration": DefineStatementRaw(
                        "DEFINE TABLE migration SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "planet": DefineStatementRaw(
                        "DEFINE TABLE planet SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "student": DefineStatementRaw(
                        "DEFINE TABLE student SCHEMAFULL PERMISSIONS NONE",
                    ),
                },
            ),
        ),
        tokens: Tokens(
            Info(
                {},
            ),
        ),
        users: Users(
            Info(
                {},
            ),
        ),
    },
    migration_meta: [
        StreamLinedMigration {
            basename: Basename(
                "migration_32_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_31_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_30_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_29_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_28_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_27_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_26_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_25_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_24_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_23_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_22_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_21_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_20_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_19_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_18_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_17_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_16_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_15_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_14_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_13_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_12_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_11_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_10_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_9_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_8_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_7_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_6_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_5_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_4_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_3_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_2_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_1_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "0581c30713a306fba4e65cf40c06c81bed66786cf2b2aef60e4fc144495ff657",
            ),
            checksum_down: None,
        },
    ],
}
